# vicorder

./: CMakeLists.txt  README.md  conanfile.txt  profile.txt  vicorder.sln  vicorder.vcxproj
.github/workflows/: msbuild.yml
include/vicorder/: OutputTask.h  TOTOutputTask.h  TOTask.h  TaskVisitor.h  VRBuilder.h  VRBuilderDirector.h  VideoRecorder.h
src/API/: ExternalStorage.cpp  ExternalStorage.h  ExternalStorageManager.cpp  ExternalStorageManager.h  VideoRecorder.cpp
src/common/: AviCreateTask.h  CaptureTask.h  CommonUtiles.cpp  CommonUtiles.h  CompressingTask.h  FrameToDiskTask.h  TaskVisitor.cpp  VRBuilder.cpp  VRBuilderDirector.cpp  VideoOutput.h  dllinterface.h
